Fixed padding on mobile (#9)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -277,7 +277,12 @@ div.tag-wrapper {
 /*****************
     Media Queries
 ******************/
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 850px) {
+  section {
+    padding: 3rem 2rem ;
+  }
+}
+@media screen and (max-width: 550px) {
   section#project .project {
     flex-direction: column;
   }
